--- a/ProyectoFinalAp2/Pages/Registros/R_Factura.razor
+++ b/ProyectoFinalAp2/Pages/Registros/R_Factura.razor
@@ -2,11 +2,14 @@
 @page "/Facturas/{facturaId:int}"
 @using ProyectoFinalAp2.Controllers
 @using ProyectoFinalAp2.Models
+@using ProyectoFinalAp2.Data
+
 
 @inject IToastService toast
+@inject IJSRuntime JS
 
 <EditForm Model="facturas" OnValidSubmit="Guardar">
-    <DataAnnotationsValidator/>
+    <DataAnnotationsValidator />
 
     <div class="card">
         <div class="card-header alert-info">
@@ -69,7 +72,7 @@
                     <div class="col">
                         <label>IMPORTE</label>
                         <div class="input-group">
-                            <InputNumber @bind-Value="importe" class="form-control" readonly="true"/>
+                            <InputNumber @bind-Value="importe" class="form-control" readonly="true" />
                             <div class="input-group-append">
                                 <button type="button" class="btn btn-info" @onclick="Agregar"><span class="icon-add_circle"></span>Agregar</button>
                             </div>
@@ -81,29 +84,29 @@
 
             @*Detalle*@
             <table class="table">
-                    <thead>
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>DESCRIPCION</th>
+                        <th>CANTIDAD</th>
+                        <th>PRECIO</th>
+                        <th>IMPORTE</th>
+                    </tr>
+                </thead>
+                <tbody class="table-striped">
+                    @foreach (var item in facturas.Detalles)
+                    {
                         <tr>
-                            <th>ID</th>
-                            <th>DESCRIPCION</th>
-                            <th>CANTIDAD</th>
-                            <th>PRECIO</th>
-                            <th>IMPORTE</th>
+                            <td>@item.ProductoId</td>
+                            <td>@GetDescripcion(item.ProductoId)</td>
+                            <td>@item.Cantidad</td>
+                            <td>@item.Precio</td>
+                            <td>@(item.Precio*item.Cantidad)</td>
+                            <td><button type="button" class="btn btn-outline-danger" @onclick="(() => EliminarOrdenDetalle(item))"><span class="icon-remove"></span>Remover</button></td>
                         </tr>
-                    </thead>
-                    <tbody class="table-striped">
-                        @foreach (var item in facturas.Detalles)
-                        {
-                            <tr>
-                                <td>@item.ProductoId</td>
-                                <td>@GetDescripcion(item.ProductoId)</td>
-                                <td>@item.Cantidad</td>
-                                <td>@item.Precio</td>
-                                <td>@(item.Precio*item.Cantidad)</td>
-                                <td><button type="button" class="btn btn-outline-danger" @onclick="(() => EliminarOrdenDetalle(item))"><span class="icon-remove"></span>Remover</button></td>
-                            </tr>
-                        }
+                    }
 
-                    </tbody>
+                </tbody>
 
             </table>
 
@@ -117,12 +120,12 @@
 
         <div class="card-footer">
             <div class="form-group text-center" display: inline-block>
-               <button type="button" class="btn btn-secondary" @onclick="Nuevo"><span class="icon-add"></span> Nuevo </button>
-               <button type="submit" class="btn btn-success"><span class="icon-save"></span> Guardar </button>
-                    <button type="button" class="btn btn-danger" @onclick="Eliminar"><span class="icon-delete_forever"></span> Eliminar </button>
+                <button type="button" class="btn btn-secondary" @onclick="Nuevo"><span class="icon-add"></span> Nuevo </button>
+                <button type="submit" class="btn btn-success"><span class="icon-save"></span> Guardar </button>
+                <button type="button" class="btn btn-danger" @onclick="Eliminar"><span class="icon-delete_forever"></span> Eliminar </button>
             </div>
         </div>
-        
+
 
     </div>
 
@@ -147,15 +150,8 @@
     protected override void OnInitialized()
     {
         Nuevo();
-        if (facturaId > 0)
-        {
-            var auxFactura = FacturasBLL.Buscar(facturaId);
-            if (auxFactura != null)
-                this.facturas = auxFactura;
-            else
-                toast.ShowWarning("No encontrado.");
-        }
 
+        var auxFactura = Buscar(facturaId);
         listaClientes = ClientesBLL.GetList(p => true);
         listaProductos = ProductosBLL.GetList(p => true);
     }
@@ -163,11 +159,15 @@
     private string GetDescripcion(int id)
     {
         string aux = string.Empty;
-        var auxProducto = ProductosBLL.Buscar(id).Descripcion;
+        var auxProducto = ProductosBLL.Buscar(id); ;
         if (auxProducto != null)
         {
-            aux = auxProducto;
+            aux = auxProducto.Descripcion;
 
+        }
+        else
+        {
+            aux = "Producto eliminado";
         }
         return aux;
     }
@@ -189,7 +189,7 @@
         importe = 0;
     }
 
-    private void Buscar()
+    private async Task Buscar()
     {
         var encontrado = FacturasBLL.Buscar(facturas.FacturaId);
         if (encontrado != null)
@@ -197,26 +197,44 @@
             this.facturas = encontrado;
         }
         else
-            toast.ShowWarning("No encontrado");
+            await JS.Confirmar("top-center", "info", "Aviso", "Factura no encontrada.", false, 2000);
     }
 
-    private void Agregar()
+    private async Task Buscar(int id)
+    {
+        if (id > 0)
+        {
+            var auxFactura = FacturasBLL.Buscar(facturaId);
+            if (auxFactura != null)
+                this.facturas = auxFactura;
+            else
+                await JS.Confirmar("top-center", "info", "Aviso", "Factura no encontrada.", false, 2000);
+        }
+    }
+
+    private async Task Agregar()
     {
         if (productoSeleccionado == 0)
         {
-            toast.ShowWarning("Tiene que seleccionar un producto.");
+            await JS.Confirmar("top-center", "info", "Aviso", "Seleccione un producto.", false, 2000);
             return;
         }
 
         if (cantidadColocada <= 0)
         {
-            toast.ShowWarning("La cantidad debe ser mayor a 0.");
+            await JS.Confirmar("top-center", "info", "Aviso", "La cantidad debe ser mayor a cero.", false, 2000);
+            return;
+        }
+
+        if (facturas.Detalles.Any(f => f.ProductoId == productoSeleccionado))
+        {
+            await JS.Confirmar("top-center", "info", "Aviso", "Este producto ya existe en el detalle.", false, 2000);
             return;
         }
 
         if (cantidadColocada > ProductosBLL.Buscar(productoSeleccionado).Cantidad)
         {
-            toast.ShowWarning("La cantidad sobrepasa a la del producto guardado.");
+            await JS.Confirmar("top-center", "info", "Aviso", "La cantidad sobrepasa a la guardada.", false, 2000);
             return;
         }
         else
@@ -239,11 +257,20 @@
 
     }
 
-    private void EliminarOrdenDetalle(DetalleFacturas detalle)
+    private async Task EliminarOrdenDetalle(DetalleFacturas detalle)
     {
         try
         {
-            facturas.Detalles.Remove(detalle);
+            var auxProducto = ProductosBLL.Buscar(detalle.ProductoId);
+            if (auxProducto !=null)
+            {
+                facturas.Detalles.Remove(detalle);
+            }
+            else
+            {
+                await JS.Confirmar("top-center", "error", "Error", "Este producto fue eliminado en su modulo", false, 2000);
+            }
+
             CalcularTotal();
         }
         catch (Exception)
@@ -272,13 +299,13 @@
         facturas.Total = total;
     }
 
-    private void Guardar()
+    private async Task Guardar()
     {
         bool paso = false;
 
         if (facturas.Detalles.Count() == 0)
         {
-            toast.ShowInfo("Debe agregar un producto al detalle.");
+            await JS.Confirmar("top-center", "info", "Aviso", "Debe agregar un detalle", false, 2000);
             return;
         }
         else
@@ -288,30 +315,32 @@
             if (paso)
             {
                 Nuevo();
-                toast.ShowSuccess("Guardado correctamente");
+                await JS.Confirmar("top-center", "success", "Guardado Exitosamente", "Buen trabajo", false, 2000);
             }
             else
             {
-                toast.ShowError("No fue posible guardar");
+                await JS.Confirmar("top-center", "error", "Error", "No fue posible guardar la factura", false, 2000);
             }
         }
     }
 
-    private void Eliminar()
+    private async Task Eliminar()
     {
         bool elimino;
 
-        elimino = FacturasBLL.Eliminar(facturas.FacturaId);
-
-        if (elimino)
+        if(await JS.ConfirmDelete("Confirmar", "¿Esta seguro que desea eliminar esta factura?", "question"))
         {
-            Nuevo();
-            toast.ShowSuccess("Eliminado correctamente");
+            elimino = FacturasBLL.Eliminar(facturas.FacturaId);
+
+            if (elimino)
+            {
+                Nuevo();
+                await JS.Confirmar("top-center", "success", "Eliminado", "Eliminado correctamente", false, 2000);
+            }
+            else
+                await JS.Confirmar("top-center", "error", "Error", "No fue posible eliminar la factura", false, 2000);
         }
-        else
-            toast.ShowError("No fue posible eliminar");
+
     }
-
-
 
 }
