--- a/ProyectoFinalAp2/Pages/Reportes/ReporteCategorias.razor
+++ b/ProyectoFinalAp2/Pages/Reportes/ReporteCategorias.razor
@@ -1,50 +1,55 @@
 ﻿@page "/Reportes/Categorias"
 @using ProyectoFinalAp2.Models;
 @using ProyectoFinalAp2.Controllers;
+@using ProyectoFinalAp2.Data;
+@using System.IO;
+@inject ExportService exportService
+@inject Microsoft.JSInterop.IJSRuntime JS
 
-<div class="card">
-    <div class="card-header alert-info">
-        <div class="text-center">
-            <img src="Resources/favicon.ico" height="90" />
+    <div class="card">
+        <div class="card-header alert-info">
+            <div class="text-center">
+                <img src="Resources/favicon.ico" height="90" />
+            </div>
+
+            <div class="text-center">
+                <h3 class="text-center text-black-50">ButterSoft</h3>
+                <h3 class="text-center text-black-50">Reporte de Categorias</h3>
+            </div>
+
+            <div class="float-right mb-4">
+                <label for="FECHA">Fecha de impresion: @Fecha </label>
+            </div>
         </div>
 
-        <div class="text-center">
-            <h3 class="text-center text-black-50">ButterSoft</h3>
-            <h3 class="text-center text-black-50">Reporte de Categorias</h3>
-        </div>
-
-        <div class="float-right mb-4">
-            <label for="FECHA">Fecha de impresion: @Fecha </label>
-        </div>
-    </div>
-
-    <div class="card-body">
-        <table class="table mb-3">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Descripcion</th>
-                </tr>
-            </thead>
-            <tbody class="table-striped">
-                @foreach (var item in lista)
-                {
+        <div class="card-body">
+            <table class="table mb-3">
+                <thead>
                     <tr>
-                        <td>@item.CategoriaId</td>
-                        <td>@item.Descripcion</td>
+                        <th>ID</th>
+                        <th>Descripcion</th>
                     </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-
-    <div class="card-footer">
-        <div class="form-group">
-            <label>Total de Categorias</label>
-            <input @bind="@total" class="form-control" readonly />
+                </thead>
+                <tbody class="table-striped">
+                    @foreach (var item in lista)
+                    {
+                        <tr>
+                            <td>@item.CategoriaId</td>
+                            <td>@item.Descripcion</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
         </div>
+
+        <div class="card-footer">
+            <div class="form-group">
+                <label>Total de Categorias</label>
+                <input @bind="@total" class="form-control" readonly />
+            </div>
+        </div>
+        <button class="btn btn-primary" @onclick="@ExportToPdf">Exportar a PDF</button>
     </div>
-</div>
 
 
 @code {
@@ -65,4 +70,11 @@
         total = lista.Count();
     }
 
+    protected async Task ExportToPdf()
+    {
+        using (MemoryStream excelStream = ExportService.CreatePdfCategorias(lista, Fecha))
+        {
+            await JS.SaveAs("Categorias.pdf", excelStream.ToArray());
+        }
+    }
 }
