--- a/ProyectoFinalAp2/Pages/Reportes/ReporteFactura.razor
+++ b/ProyectoFinalAp2/Pages/Reportes/ReporteFactura.razor
@@ -1,54 +1,60 @@
 ﻿@page "/Reportes/Facturas"
 @using ProyectoFinalAp2.Models;
 @using ProyectoFinalAp2.Controllers;
+@using ProyectoFinalAp2.Data;
+@using System.IO;
+@inject ExportService exportService
+@inject Microsoft.JSInterop.IJSRuntime JS
 
-<div class="card">
-    <div class="card-header alert-info">
-        <div class="text-center">
-            <img src="Resources/favicon.ico" height="90" />
+
+    <div class="card">
+        <div class="card-header alert-info">
+            <div class="text-center">
+                <img src="Resources/favicon.ico" height="90" />
+            </div>
+
+            <div class="text-center">
+                <h3 class="text-center text-black-50">ButterSoft</h3>
+                <h3 class="text-center text-black-50">Reporte de Facturas</h3>
+            </div>
+
+            <div class="float-right mb-4">
+                <label for="FECHA">Fecha de impresion: @Fecha </label>
+            </div>
         </div>
 
-        <div class="text-center">
-            <h3 class="text-center text-black-50">ButterSoft</h3>
-            <h3 class="text-center text-black-50">Reporte de Facturas</h3>
-        </div>
-
-        <div class="float-right mb-4">
-            <label for="FECHA">Fecha de impresion: @Fecha </label>
-        </div>
-    </div>
-
-    <div class="card-body">
-        <table class="table mb-3">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>CLIENTE ID</th>
-                    <th>FECHA</th>
-                    <th>TOTAL</th>
-                </tr>
-            </thead>
-            <tbody class="table-striped">
-                @foreach (var item in lista)
-                {
+        <div class="card-body">
+            <table class="table mb-3">
+                <thead>
                     <tr>
-                        <td>@item.FacturaId</td>
-                        <td>@item.ClienteId</td>
-                        <td>@item.Fecha</td>
-                        <td>@item.Total</td>
+                        <th>ID</th>
+                        <th>CLIENTE</th>
+                        <th>FECHA</th>
+                        <th>TOTAL</th>
                     </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-
-    <div class="card-footer">
-        <div class="form-group">
-            <label>Total de Clientes</label>
-            <input @bind="@total" class="form-control" readonly />
+                </thead>
+                <tbody class="table-striped">
+                    @foreach (var item in lista)
+                    {
+                        <tr>
+                            <td>@item.FacturaId</td>
+                            <td>@GetNombre(item.ClienteId)</td>
+                            <td>@item.Fecha</td>
+                            <td>@item.Total</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
         </div>
+
+        <div class="card-footer">
+            <div class="form-group">
+                <label>Total de Clientes</label>
+                <input @bind="@total" class="form-control" readonly />
+            </div>
+        </div>
+        <button class="btn btn-primary" @onclick="@ExportToPdf">Exportar a PDF</button>
     </div>
-</div>
 
 
 @code {
@@ -75,4 +81,23 @@
         total = auxTotal;
     }
 
+    protected async Task ExportToPdf()
+    {
+        using (MemoryStream excelStream = ExportService.CreatePdfFacturas(lista, Fecha))
+        {
+            await JS.SaveAs("Facturas.pdf", excelStream.ToArray());
+        }
+    }
+
+    private string GetNombre(int id)
+    {
+        var auxCliente = ClientesBLL.Buscar(id);
+        string nombre = string.Empty;
+        if (auxCliente != null)
+            nombre = auxCliente.Nombre;
+        else
+            nombre = "Cliente Eliminado.";
+        return nombre;
+
+    }
 }
