--- a/ProyectoFinalAp2/Pages/Consultas/C_Clientes.razor
+++ b/ProyectoFinalAp2/Pages/Consultas/C_Clientes.razor
@@ -1,7 +1,10 @@
 ﻿@page "/ConsultaClientes"
+@page "/ConsultaClientes/{numPagina:int}"
 @using ProyectoFinalAp2.Controllers
+@using ProyectoFinalAp2.Paginacion
 @using ProyectoFinalAp2.Models
 @using System.IO;
+@using System.Linq.Expressions
 @using ProyectoFinalAp2.Data;
 @inject Microsoft.JSInterop.IJSRuntime JS
 @inject ExportService exportService
@@ -74,6 +77,7 @@
                     <th>RNC</th>
                     <th>DIRECCION</th>
                     <th>TELEFONO</th>
+                    <th>FECHA</th>
                     <th>EMAIL</th>
                 </tr>
             </thead>
@@ -86,6 +90,7 @@
                         <td>@item.RNC</td>
                         <td>@item.Direccion</td>
                         <td>@item.Telefono</td>
+                        <td>@item.Fecha</td>
                         <td>@item.Email</td>
                         <td><a class="btn btn-outline-info" href="Clientes/@item.ClienteId">Ver</a></td>
                     </tr>
@@ -96,6 +101,16 @@
         <div class="form-group">
             <label>Cantidad de clientes</label>
             <input type="number" @bind="cantidadCliente" class="form-control" readonly />
+        </div>
+
+        <div class="form-group">
+            <ul class="pagination pagination-lg">
+                @for (int i = 1; i <= cantidadDePaginas; i++)
+                {
+                    <li class="page-item Azul"><a class="page-link Azul" @onclick="SaltarPagina" href="ConsultaClientes/@i">@i</a></li>
+                }
+                <li class="page-item text-black-50"><a class="page-link text-black-50" @onclick="Salto"> ► </a></li>
+            </ul>
         </div>
     </div>
 
@@ -109,6 +124,14 @@
 
 @code {
 
+    [Parameter]
+    public int numPagina { get; set; }
+
+    private double cantidadDePaginas { get; set; } = 0;
+    private double cantidadDeLista { get; set; } = 0;
+    private int contador { get; set; }
+    Paginas pagina = new Paginas();
+
     List<Clientes> lista = new List<Clientes>();
     public bool BuscarFecha { get; set; }
     public DateTime DesdeFecha { get; set; }
@@ -121,6 +144,71 @@
     {
         DesdeFecha = DateTime.Now;
         HastaFecha = DateTime.Now;
+    }
+
+    private void ContarPaginas(Expression<Func<Clientes, bool>> expression)
+    {
+        cantidadDeLista = ClientesBLL.GetList(expression).Count();
+        cantidadDePaginas = Math.Ceiling(cantidadDeLista / pagina.mostrarCantidad);
+    }
+
+    private void TomarPaginas(Expression<Func<Clientes, bool>> expression)
+    {
+        lista = ClientesBLL.GetList(expression);
+        this.lista = ClientesBLL.GetList(expression).Take(pagina.mostrarCantidad).ToList();
+    }
+
+    private void SaltarPagina()
+    {
+        contador = numPagina - 1;
+        Salto();
+    }
+
+    private void Salto()
+    {
+        contador += pagina.pagina;
+        contador = (contador >= cantidadDePaginas) ? 0 : contador;
+
+        if (filtro == 1)
+        {
+            this.lista = ClientesBLL.GetList(p => true).Skip(contador * pagina.mostrarCantidad).Take(pagina.mostrarCantidad).ToList();
+        }
+        if (filtro == 2)
+        {
+            int id = GetAuxId();
+            this.lista = ClientesBLL.GetList(p => p.ClienteId == id).Skip(contador * pagina.mostrarCantidad).Take(pagina.mostrarCantidad).ToList();
+        }
+        if (filtro == 3)
+        {
+            this.lista = ClientesBLL.GetList(p => p.Nombre == criterio).Skip(contador * pagina.mostrarCantidad).Take(pagina.mostrarCantidad).ToList();
+        }
+        if (filtro == 4)
+        {
+            this.lista = ClientesBLL.GetList(p => p.RNC == criterio).Skip(contador * pagina.mostrarCantidad).Take(pagina.mostrarCantidad).ToList();
+        }
+        if (filtro == 5)
+        {
+            this.lista = ClientesBLL.GetList(p => p.Direccion == criterio).Skip(contador * pagina.mostrarCantidad).Take(pagina.mostrarCantidad).ToList();
+        }
+        if (filtro == 6)
+        {
+            this.lista = ClientesBLL.GetList(p => p.Telefono == criterio).Skip(contador * pagina.mostrarCantidad).Take(pagina.mostrarCantidad).ToList();
+        }
+        if (filtro == 7)
+        {
+            this.lista = ClientesBLL.GetList(p => p.Email == criterio).Skip(contador * pagina.mostrarCantidad).Take(pagina.mostrarCantidad).ToList();
+        }
+        if(BuscarFecha)
+        {
+            lista = lista.Where(f => f.Fecha.Date >= DesdeFecha.Date && f.Fecha.Date <= HastaFecha.Date).ToList();
+        }
+    }
+
+    private void Paginar(Expression<Func<Clientes, bool>> expression)
+    {
+        ContarPaginas(expression);
+        TomarPaginas(expression);
+        SaltarPagina();
     }
 
     private async Task Buscar()
@@ -137,30 +225,38 @@
                 {
                     case 1: //Todos
                         this.lista = ClientesBLL.GetList(c => true);
+                        Paginar(c => true);
                         break;
                     case 2: //Id
                         int ID = await GetId();
                         this.lista = ClientesBLL.GetList(c => c.ClienteId == ID);
+                        Paginar(c => c.ClienteId == ID);
                         break;
                     case 3: //nombre
                         this.lista = ClientesBLL.GetList(f => f.Nombre == criterio);
+                        Paginar(f => f.Nombre == criterio);
                         break;
                     case 4: //rnc
                         this.lista = ClientesBLL.GetList(f => f.RNC == criterio);
+                        Paginar(f => f.RNC == criterio);
                         break;
                     case 5: //direccion
                         this.lista = ClientesBLL.GetList(f => f.Direccion == criterio);
+                        Paginar(f => f.Direccion == criterio);
                         break;
                     case 6: //telefono
                         this.lista = ClientesBLL.GetList(f => f.Telefono == criterio);
+                        Paginar(f => f.Telefono == criterio);
                         break;
                     case 7: //email
                         this.lista = ClientesBLL.GetList(f => f.Email == criterio);
+                        Paginar(f => f.Email == criterio);
                         break;
                 }
                 if (BuscarFecha == true)
                 {
                     lista = lista.Where(f => f.Fecha.Date >= DesdeFecha.Date && f.Fecha.Date <= HastaFecha.Date).ToList();
+                    Paginar(f => f.Fecha.Date >= DesdeFecha.Date && f.Fecha.Date <= HastaFecha.Date);
                 }
                 if (lista == null)
                 {
@@ -198,6 +294,22 @@
         {
 
             await JS.Confirmar("top-center", "error", "Error", "El Id debe ser numerico", false, 2000);
+        }
+
+        return resultado;
+    }
+
+    private int GetAuxId()
+    {
+        int resultado = 0;
+
+        try
+        {
+            resultado = Convert.ToInt32(criterio);
+            return resultado;
+        }
+        catch (Exception)
+        {
         }
 
         return resultado;
