--- a/ProyectoFinalAp2/Pages/Consultas/C_EntradaProductos.razor
+++ b/ProyectoFinalAp2/Pages/Consultas/C_EntradaProductos.razor
@@ -1,8 +1,12 @@
 ﻿@page "/Consultas/EntradaProductos"
+@page "/Consultas/EntradaProductos/{numPagina:int}"
+
 @using ProyectoFinalAp2.Models;
 @using ProyectoFinalAp2.Controllers;
 @using ProyectoFinalAp2.Data;
+@using ProyectoFinalAp2.Paginacion;
 @using System.IO;
+@using System.Linq.Expressions;
 
 @inject ExportService exportService
 @inject Microsoft.JSInterop.IJSRuntime JS
@@ -46,8 +50,8 @@
                     <label for="filtro">Filtro: </label>
                     <select class="form-control" @bind="Filtro">
                         <option value="" disabled selected>Seleccione un filtro</option>
-                        <option value="Todo">Todo</option>
-                        <option value="Id">ID</option>
+                        <option value="1">Todo</option>
+                        <option value="2">ID</option>
                     </select>
                 </div>
 
@@ -82,6 +86,16 @@
                     </tbody>
                 </table>
             </div>
+
+            <div class="form-group text-center">
+                <ul class="pagination pagination-lg">
+                    @for (int i = 1; i <= cantidadDePaginas; i++)
+                    {
+                        <li class="page-item Azul"><a class="page-link Azul" @onclick="SaltarPagina" href="ConsultaCategorias/@i">@i</a></li>
+                    }
+                    <li class="page-item text-black-50"><a class="page-link text-black-50" @onclick="Salto"> ► </a></li>
+                </ul>
+            </div>
         </div>
         <div class="card-footer">
             <button type="button" class="btn btn-outline-primary form-control" @onclick="ExportToPdf">Exportar a PDF</button>
@@ -90,10 +104,17 @@
 </EditForm>
 
 @code {
+    [Parameter]
+    public int numPagina { get; set; }
+
+    private double cantidadDePaginas { get; set; } = 0;
+    private double cantidadDeLista { get; set; } = 0;
+    private int contador { get; set; }
+    Paginas pagina = new Paginas();
 
     private List<EntradaProductos> lista { get; set; }
 
-    private string Filtro { get; set; }
+    private int Filtro { get; set; }
     private string Criterio { get; set; }
     public bool BuscarFecha = false;
     public DateTime DesdeFecha { get; set; }
@@ -105,6 +126,64 @@
         lista = new List<EntradaProductos>();
         DesdeFecha = DateTime.Now;
         HastaFecha = DateTime.Now;
+    }
+
+    private void ContarPaginas(Expression<Func<EntradaProductos, bool>> expression)
+    {
+        cantidadDeLista = EntradaProductoBLL.GetList(expression).Count();
+        cantidadDePaginas = Math.Ceiling(cantidadDeLista / pagina.mostrarCantidad);
+    }
+
+    private void TomarPaginas(Expression<Func<EntradaProductos, bool>> expression)
+    {
+        lista = EntradaProductoBLL.GetList(expression);
+        this.lista = EntradaProductoBLL.GetList(expression).Take(pagina.mostrarCantidad).ToList();
+    }
+
+    private void SaltarPagina()
+    {
+        contador = numPagina - 1;
+        Salto();
+    }
+
+    private int GetAuxId()
+    {
+        int resultado = 0;
+
+        try
+        {
+            resultado = Convert.ToInt32(Criterio);
+            return resultado;
+        }
+        catch (Exception)
+        {
+
+        }
+
+        return resultado;
+    }
+
+    private void Salto()
+    {
+        contador += pagina.pagina;
+        contador = (contador >= cantidadDePaginas) ? 0 : contador;
+
+        if (Filtro == 1)
+        {
+            this.lista = EntradaProductoBLL.GetList(p => true).Skip(contador * pagina.mostrarCantidad).Take(pagina.mostrarCantidad).ToList();
+        }
+        if (Filtro == 2)
+        {
+            int id = GetAuxId();
+            this.lista = EntradaProductoBLL.GetList(p => p.EntradaProductoId == id).Skip(contador * pagina.mostrarCantidad).Take(pagina.mostrarCantidad).ToList();
+        }
+    }
+
+    private void Paginar(Expression<Func<EntradaProductos, bool>> expression)
+    {
+        ContarPaginas(expression);
+        TomarPaginas(expression);
+        SaltarPagina();
     }
 
     protected async Task ExportToPdf()
@@ -135,10 +214,10 @@
                 {
                     switch (Filtro)
                     {
-                        case "Todo":
+                        case 1:
                             lista = EntradaProductoBLL.GetList(e => true);
                             break;
-                        case "ID":
+                        case 2:
                             lista = EntradaProductoBLL.GetList(e => e.UsuarioId == Convert.ToInt32(Criterio));
                             break;
                     }
