--- a/ProyectoFinalAp2/Pages/Consultas/C_Usuarios.razor
+++ b/ProyectoFinalAp2/Pages/Consultas/C_Usuarios.razor
@@ -1,11 +1,15 @@
 ﻿@page "/Consultas/Usuarios"
+@page "/Consultas/Usuarios/{numPagina:int}"
 
 @inject IToastService toast
 
 @using ProyectoFinalAp2.Models;
 @using ProyectoFinalAp2.Controllers;
 @using ProyectoFinalAp2.Data;
+@using ProyectoFinalAp2.Paginacion;
 @using System.IO;
+@using System.Linq.Expressions;
+
 @inject ExportService exportService
 @inject Microsoft.JSInterop.IJSRuntime JS
 
@@ -47,10 +51,10 @@
                     <label for="filtro">Filtro: </label>
                     <select class="form-control" @bind="Filtro">
                         <option value="" disabled selected>Seleccione un filtro</option>
-                        <option value="Todo">Todo</option>
-                        <option value="Id">ID</option>
-                        <option value="Descripcion">Nombre</option>
-                        <option value="Descripcion">Nombre de Usuario</option>
+                        <option value="1">Todo</option>
+                        <option value="2">ID</option>
+                        <option value="3">Nombre</option>
+                        <option value="4">Nombre de Usuario</option>
                     </select>
                 </div>
 
@@ -87,6 +91,15 @@
                     </tbody>
                 </table>
             </div>
+            <div class="form-group text-center">
+                <ul class="pagination pagination-lg">
+                    @for (int i = 1; i <= cantidadDePaginas; i++)
+                    {
+                        <li class="page-item Azul"><a class="page-link Azul" @onclick="SaltarPagina" href="ConsultaCategorias/@i">@i</a></li>
+                    }
+                    <li class="page-item text-black-50"><a class="page-link text-black-50" @onclick="Salto"> ► </a></li>
+                </ul>
+            </div>
         </div>
         <div class="card-footer">
             <button type="button" class="btn btn-outline-primary form-control" @onclick="ExportToPdf">Exportar a PDF</button>
@@ -95,10 +108,17 @@
 </EditForm>
 
 @code {
+    [Parameter]
+    public int numPagina { get; set; }
+
+    private double cantidadDePaginas { get; set; } = 0;
+    private double cantidadDeLista { get; set; } = 0;
+    private int contador { get; set; }
+    Paginas pagina = new Paginas();
 
     private List<Usuarios> lista { get; set; }
 
-    private string Filtro { get; set; }
+    private int Filtro { get; set; }
     private string Criterio { get; set; }
     public bool BuscarFecha = false;
     public DateTime DesdeFecha { get; set; }
@@ -110,6 +130,72 @@
         lista = new List<Usuarios>();
         DesdeFecha = DateTime.Now;
         HastaFecha = DateTime.Now;
+    }
+
+    private void ContarPaginas(Expression<Func<Usuarios, bool>> expression)
+    {
+        cantidadDeLista = UsuariosBLL.GetList(expression).Count();
+        cantidadDePaginas = Math.Ceiling(cantidadDeLista / pagina.mostrarCantidad);
+    }
+
+    private void TomarPaginas(Expression<Func<Usuarios, bool>> expression)
+    {
+        lista = UsuariosBLL.GetList(expression);
+        this.lista = UsuariosBLL.GetList(expression).Take(pagina.mostrarCantidad).ToList();
+    }
+
+    private void SaltarPagina()
+    {
+        contador = numPagina - 1;
+        Salto();
+    }
+
+    private int GetAuxId()
+    {
+        int resultado = 0;
+
+        try
+        {
+            resultado = Convert.ToInt32(Criterio);
+            return resultado;
+        }
+        catch (Exception)
+        {
+
+        }
+
+        return resultado;
+    }
+
+    private void Salto()
+    {
+        contador += pagina.pagina;
+        contador = (contador >= cantidadDePaginas) ? 0 : contador;
+
+        if (Filtro == 1)
+        {
+            this.lista = UsuariosBLL.GetList(p => true).Skip(contador * pagina.mostrarCantidad).Take(pagina.mostrarCantidad).ToList();
+        }
+        if (Filtro == 2)
+        {
+            int id = GetAuxId();
+            this.lista = UsuariosBLL.GetList(p => p.UsuarioId == id).Skip(contador * pagina.mostrarCantidad).Take(pagina.mostrarCantidad).ToList();
+        }
+        if (Filtro == 3)
+        {
+            this.lista = UsuariosBLL.GetList(p => p.Nombres == Criterio).Skip(contador * pagina.mostrarCantidad).Take(pagina.mostrarCantidad).ToList();
+        }
+        if (Filtro == 4)
+        {
+            this.lista = UsuariosBLL.GetList(p => p.NombreUsuario == Criterio).Skip(contador * pagina.mostrarCantidad).Take(pagina.mostrarCantidad).ToList();
+        }
+    }
+
+    private void Paginar(Expression<Func<Usuarios, bool>> expression)
+    {
+        ContarPaginas(expression);
+        TomarPaginas(expression);
+        SaltarPagina();
     }
 
     protected async Task ExportToPdf()
@@ -140,16 +226,16 @@
                 {
                     switch (Filtro)
                     {
-                        case "Todo":
+                        case 1:
                             lista = UsuariosBLL.GetList(e => true);
                             break;
-                        case "ID":
+                        case 2:
                             lista = UsuariosBLL.GetList(e => e.UsuarioId == Convert.ToInt32(Criterio));
                             break;
-                        case "Nombre":
+                        case 3:
                             lista = UsuariosBLL.GetList(e => e.Nombres == Criterio);
                             break;
-                        case "Nombre De Usuario":
+                        case 4:
                             lista = UsuariosBLL.GetList(e => e.NombreUsuario == Criterio);
                             break;
                     }
